# Evolve

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AI_AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  STRATEGY_IMPLEMENTATION_SUMMARY.md  TRAINING_DATA_STRUCTURE.md  codex.py  demo_invariant_run.py  golden_2025-05.csv  itau_2024-08.csv  itau_2024-12.csv  itau_2025-03.csv  itau_2025-06.csv  itau_2025-06.txt  log_receiver.py  merged_workflow_logs.txt  pdf_to_csv.py  pyproject.toml  self_supervised_training.patch  smoothness.patch  txt_to_csv.py
$.github/tools/: ai_patch_loop.py
.github/tools/: ai_patch.py  ai_patch_loop.py  codex_patch.py  evolve.py  score_best.json
.github/workflows/: ci.yaml
ci_inbox/: log_20250608-000219.txt
ci_inbox/leolech14-Evolve/: log_main_12345_20250608-000641.txt  log_main_connectivity-test_20250608-004748.txt  log_main_tunnel-test-3_20250608-004423.txt
ci_inbox/test-repo/: log_test-branch_local-test_20250608-003053.txt  log_test-branch_ngrok-test-new_20250608-003240.txt
config/: candidates.txt  hard_goldens.txt
docs/: EDGE_CASES.md  strategy.md
log-receiver/: app.py  fly.toml
logs/: coverage.xml
scripts/: ai_focused_accuracy.py  analyze_pdfs.py  check_accuracy.py  check_evolve_prereqs.py  check_hard_goldens.py  ci_summary.py  comprehensive_analysis.py  generate_golden_csvs.py  incremental_learner.py  parse_all.py  pattern_enhancer.py  semantic_validator.py  validate_real_accuracy.py
src/statement_refinery/: __init__.py  cli.py  pdf_to_csv.py  self_check.py  summary.py  txt_to_csv.py  validation.py
tests/: README.md  TXT_FORMAT_SPEC.md  conftest.py  test_accuracy_script.py  test_ci_summary_constants.py  test_cli.py  test_documentation.md  test_edge_cases.py  test_evolve_sentinel.py  test_extras.py  test_invariants.py  test_logging_handler.py  test_parse_line.py  test_pdf_cli.py  test_pdf_to_csv.py  test_pdf_to_txt.py  test_pre_commit_config.py  test_summary_extractor.py  test_transaction_enricher.py  test_transaction_validation.py  test_txt_parser.py  test_txt_to_csv.py  test_utils.py  test_validation.py  test_validation_helpers.py  test_validation_pdfplumber.py
tests/data/: Itau_2024-09.txt  Itau_2024-11.txt  golden_2024-05.csv  golden_2024-06.csv  golden_2024-07.csv  golden_2024-08.csv  golden_2024-09.csv  golden_2024-10.csv  golden_2024-11.csv  golden_2024-12.csv  golden_2025-01.csv  golden_2025-02.csv  golden_2025-03.csv  golden_2025-04.csv  golden_2025-06.csv  golden_2026-01.csv  (+4 more)
(+15 files in other folders)
