[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "statement_refinery"
version = "0.1.0"
description = "Utilities for converting Itau card statements to CSV"
authors = [{name="Leonardo Lech", email="leonardo.lech@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pdfplumber",
]

[project.scripts]
pdf-to-csv = "statement_refinery.pdf_to_csv:main"

[project.optional-dependencies.dev]
# Development dependencies for linting, type checking and tests
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
    "mypy",
    "openai>=0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["statement_refinery"]
