[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "statement_refinery"
version = "0.1.0"
description = "Utilities for converting Itau card statements to CSV"
authors = [{name="Leonardo Lech", email="leonardo.lech@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pdfplumber",
]

[project.scripts]
evolve = "statement_refinery.cli:main"

[project.optional-dependencies]
# Development dependencies for linting, type checking and tests
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "openai>=1",
    "pdfplumber",
    "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["statement_refinery"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
explicit_package_bases = true
